Bug 272471 - Regression: All tracks without album are irrevocably added to "Various artists"
Summary: Regression: All tracks without album are irrevocably added to "Various artists"
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/Local (other bugs)
Version First Reported In: 2.4-GIT
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.5
Assignee: Amarok Bugs
URL:
Keywords: regression, release_blocker
: 273103 273874 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-04 20:42 UTC by Ralf Jung
Modified: 2011-12-06 00:19 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Jung 2011-05-04 20:42:51 UTC
Version:           2.4.0 (using KDE 4.6.2) 
OS:                Linux



Reproducible: Always

Steps to Reproduce:
Scan a collection that contains a whole bunch of files with an empty album in the ID3 tags (either because it's a single, or because I just got a bunch of songs from that artist, but no more than two tracks per album).

Actual Results:  
All those albumless tracks are added to an "Unknown Album" in the "Various Artists" category. There is no way to get them out of there, since the usual "Do not show under Various Artists" is not displayed in this album's context menu. 

Expected Results:  
Each artist should get its own "Unknown Album".

This is a regression, everything worked fine in previous versions (2.3.x was the last one I used).

This also totally breaks any reasonably sorting of the playlist, since I do have some albums that actually are by various artists, so the main sort criteria is "Album Artist"...

This may or may not be the same issue as Bug 271111, I am not totally sure.

OS: Linux (x86_64) release 2.6.35-28-generic
Compiler: cc
Comment 1 Myriam Schweingruber 2011-06-04 12:16:53 UTC
This is an automated message from the triager:

Amarok 2.4.1 has been released on May 8 already. Could you please upgrade and test if you can still reproduce this bug?

Without feedback within a month we will close this bug as resolved.

Thank you for your understanding.
Comment 2 Ralf Jung 2011-06-04 12:58:58 UTC
I will hardly be able to update my distribution within the next month (can't risk any instabilities in the middle of the semester). Are there Amarok 2.4.1 packages available for Kubuntu 10.10?
Comment 3 Myriam Schweingruber 2011-06-04 14:14:23 UTC
Unfortunately not AFAIK, I will keep this open. Thank you for your fast feedback.
Comment 4 Ralf Jung 2011-07-27 21:40:52 UTC
The issue persists with Amarok 2.4.1 on Debian testing.
Comment 5 Myriam Schweingruber 2011-07-28 13:32:56 UTC
Thank you for the feedback.
Comment 6 Ralf Jung 2011-08-10 14:57:01 UTC
Amarok 2.4.3 still has this problem. It essentially makes the collection manager and the playlist sorting useless for about 30% of my collection...
Comment 7 Sven Krohlas 2011-08-10 15:08:17 UTC
Yep, I can see that, too. :/
Comment 8 Myriam Schweingruber 2011-11-19 08:40:59 UTC
*** Bug 273103 has been marked as a duplicate of this bug. ***
Comment 9 Myriam Schweingruber 2011-11-19 08:42:12 UTC
*** Bug 273874 has been marked as a duplicate of this bug. ***
Comment 10 ned 2011-11-20 01:45:13 UTC
I'm also seeing this in 2.4.3. Very annoying.

On a related note: I think this is the same problem, but slightly different effect: tracks with albums but no album artists show up among the "various artists" catalogue, even if there is only one artist on the album, and even if there is only one track. 

A potential way to deal with both problems might be to check if the album has tracks from more than one artist, and if not, mark as "not various", and then assume the album artist (if missing) is the same as the artist.

Also, this can't be solved by simply adding an album artist to tracks, because there are some tracks that legitimately do not have an album (eg. unreleased tracks, internet downloads), and amarok does not allow an album artist tag on tracks with no album.
Comment 11 Matěj Laitl 2011-12-06 00:17:54 UTC
Git commit 096d1736801f82b5cae356d37df304dcd02dff8b by Matěj Laitl.
Committed on 05/12/2011 at 23:58.
Pushed by laitl into branch 'master'.

ScanResultProcessor: allow albums with empty name but nonempty artist

This fixes bug 272471, hope it doesn't break anything else. It was an
easy fix, I wonder no-one went for it sooner.

BUG: 272471
FIXED-IN: 2.5

M  +1    -0    ChangeLog
M  +5    -7    src/core-impl/collections/db/ScanResultProcessor.cpp
M  +1    -1    src/core-impl/collections/db/ScanResultProcessor.h
M  +1    -2    src/core-impl/collections/db/sql/SqlRegistry.cpp

http://commits.kde.org/amarok/096d1736801f82b5cae356d37df304dcd02dff8b
Comment 12 Matěj Laitl 2011-12-06 00:19:59 UTC
Please test. Note that you have to either do a full rescan or touch all directories containing tracks that were falsely assigned to Various Artists.