ScanResultProcessor: allow albums with empty name but nonempty artist

This fixes bug 272471, hope it doesn't break anything else. It was an
easy fix, I wonder no-one went for it sooner.

BUG: 272471
FIXED-IN: 2.5